--- a/local_tonconnect-manifest.json
+++ b/local_tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://anemone-assuring-guinea.ngrok-free.app",
-  "name": "Nifty Nerds Network",
+  "name": "niftylocaltestapp",
   "iconUrl": "https://anemone-assuring-guinea.ngrok-free.app/logo.png"
 }
